# CRNN-OCR

./: .gitignore  .pre-commit-config.yaml  README.md  inference.py  pyproject.toml  train.py
.dvc/: config
configs/: main.yaml
data/: .gitignore  dataset.pickle.dvc
models/: 166800400097979711.onnx.dvc
src/: model.py  utils.py
